--- a/patient-form.html
+++ b/patient-form.html
@@ -256,7 +256,7 @@
               </td>
              </tr>
              <tr>
-              <input type="button" value="Review" onclick="getdata1()">
+              <input type="button" value="Review" onclick="getdata()">
               <input type="reset" value="Clear and start over" class="form-field">
               <input type="submit" value="Submit" class="form-field">
              </tr>
