--- a/patient-form.html
+++ b/patient-form.html
@@ -19,7 +19,13 @@
      </td>
      <td valign="bottom" align="right">
       "Today's date: "
-      <span id="today">10/20/2025</span>
+      <script type="text/javascript">
+            var months = ['January','February','March','April','May','June','July',
+    'August','September','October','November','December'];       
+    var today = new Date();
+    today.setTime(today.getTime());       
+    document.getElementById("spanDate").innerHTML = months[today.getMonth()] + " " + today.getDate()+ ", " + today.getFullYear();
+        </script>
      </td>
     </tr>
    </tbody>
